[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-serve-optimizer-env"
version = "0.1.0"
description = "LLM Deployment Optimizer - OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core==0.2.2",
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "websockets==16.0",
    "openai==2.29.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "psutil==7.2.2",
    "pytest==9.0.2"
]

[project.scripts]
server = "server.app:main"